# kyc-verifier

./: README.md
src/: router.tsx
src-tauri/: .env.example  Cargo.toml
src-tauri/risczero/: README.md
src-tauri/risczero/core/: Cargo.toml
src-tauri/risczero/methods/guest/: Cargo.toml
src-tauri/risczero/methods/guest/src/: .env.example  main.rs
src-tauri/src/: main.rs  mock_data.json
src/common/components/Common/: Sidebar.tsx
src/common/constants/: navigation.ts
src/pages/IdentityPage/: IdentityPage.tsx
src/pages/IdentityPage/components/: VerifyUser.tsx  index.ts
src/pages/TauriPage/: TauriPage.tsx
src/pages/WalletPage/: WalletPage.tsx
src/pages/WalletPage/components/: CreateWallet.tsx
src/pages/WelcomePage/: WelcomePage.tsx
src/stores/: useWalletStore.ts
